# teste-script-extract

./: .gitignore  README.md  datapackage.yaml  extract.py  main.py  pyproject.toml  secrets.py
data-raw/: credito-inicial-autorizado_230473626634496528.csv  dados-armazem-siafi-credito-inicial-autorizado.csv
