[project]
name = "teste-script-extract"
version = "0.1.0"
description = ""
authors = [
    {name = "Viviane Nascimento",email = "vivigoncalvesporto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imap-tools (>=1.11.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "frictionless (>=5.18.1,<6.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
